# cmake_learn

./: README.md
demo1/: CMakeLists.txt  readme.md
demo1/cmake_dir1/: CMakeLists.txt  main.cpp
demo1/cmake_dir2/: CMakeLists.txt  main.cpp
demo1/include/: fileA.h  fileB.h
demo1/lib/: fileA.cpp  fileB.cpp
demo2/: CMakeLists.txt  config.h.in  main.cc  readme.md
demo2/math/: CMakeLists.txt
demo3/: CMakeLists.txt  readme.md
